syntax = "proto3";

package grpc;

option go_package = "./grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service BookHandler {
  rpc GetByID(GetByIDRequest) returns (Book) {}
  rpc Create(Book) returns (google.protobuf.Empty) {}
  rpc Update(UpdateBookRequest) returns (google.protobuf.Empty) {}
  rpc Delete(DeleteBookRequest) returns (google.protobuf.Empty) {}
  rpc ListAll(google.protobuf.Empty) returns (ListBooksResponse) {}
}

message Book {
  uint32 id = 1;
  string title = 2;
  uint32 author_id = 3;
  string description = 4;
  uint32 year = 5;
  uint32 stock = 6;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message GetByIDRequest {
  uint32 id = 1;
}

message UpdateBookRequest {
  uint32 id = 1;
  Book book = 2;
}

message DeleteBookRequest {
  uint32 id = 1;
}

message ListBooksResponse {
  repeated Book books = 1;
}
